--- a/themes/gstylez/layout/partials/comments.ejs
+++ b/themes/gstylez/layout/partials/comments.ejs
@@ -1,7 +1,7 @@
 <div class="comment-section">
     <div class="Supporter Supporter--size-728x90" style="margin-bottom: 30px;">
         <div class="Supporter-placeholder" id="ad2">
-            <h4>If you are enjoying this blog post, please consider pausing AdBlock on this domain. It helps us cover hosting fees. :)</h4>
+            <strong>If this post helped you, please consider turning off your adblocker <br />or giving us all of your money.</strong>
         </div>
         <div>
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
