--- a/themes/gstylez/layout/post.ejs
+++ b/themes/gstylez/layout/post.ejs
@@ -44,7 +44,7 @@
               </div>
               <div class="Supporter Supporter--size-728x90">
                   <div class="Supporter-placeholder" id="ad1">
-                      <h4>If you are enjoying this blog post, please consider pausing AdBlock on this domain. It helps us cover hosting fees. :)</h4>
+                      <strong>If this post helped you, please consider turning off your adblocker <br />or giving us all of your money.</strong>
                   </div>
                   <div>
                       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
