--- a/themes/gstylez/layout/partials/footer.ejs
+++ b/themes/gstylez/layout/partials/footer.ejs
@@ -74,7 +74,7 @@
     </div>
 </noscript>
 
-<div id="dialog" title="Email Signup" style="display:none;">
+<div id="subscribe" title="Email Signup" style="display:none;">
     <!-- Begin MailChimp Signup Form -->
     <div id="mc_embed_signup">
         <form action="//progblog.us15.list-manage.com/subscribe/post?u=bcf9d21d6bff38a0a9a2c1f4a&amp;id=2f57106f06" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -93,7 +93,7 @@
 <script>
     $( function() {
         $("ul.menus li:last-child a").on("click", function () {
-            $( "#dialog" ).modal();
+            $( "#subscribe" ).modal();
         });
     } );
 </script>
