UPDATING SOME STYLEZ boiiii

--- a/themes/gstylez/layout/partials/footer.ejs
+++ b/themes/gstylez/layout/partials/footer.ejs
@@ -1,7 +1,10 @@
 <footer class="footer">
-    <p>
-        &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
-    </p>
+    <a href="https://scruffycity.solutions" target="_blank">
+    <img style="height: 100px; margin-bottom: -15px;" src="https://firebasestorage.googleapis.com/v0/b/scruffycity-5f3ba.appspot.com/o/plant.png?alt=media&token=a20c6a7e-6ac4-4a5d-b690-0850d0ac7146">
+    </a>
+    <h4>
+        &copy; <%= date(new Date(), 'YYYY') %> Scruffy City Solutions
+    </h4>
 </footer>
 <!-- jQuery included in head.ejs -->
 <%- js('lib/waves') %>
