Noew blog poster

--- a/themes/gstylez/layout/post.ejs
+++ b/themes/gstylez/layout/post.ejs
@@ -44,7 +44,6 @@
               </div>
 
               <div class="Supporter Supporter--size-728x90">
-                  <div>
                       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                       <!-- Post Ad -->
                       <ins class="adsbygoogle"
@@ -55,12 +54,11 @@
                       <script>
                           (adsbygoogle = window.adsbygoogle || []).push({});
                       </script>
-                  </div>
               </div>
 
           <section class="post-content">
               <form action="https://paypal.me/progblog" style="text-align: center; margin-bottom: 30px" method="post" target="_top">
-                  <p>If this post helped you, please consider turning off your adblocker <br />or giving us all of your money.</p>
+                  <p style="font-size: 13px;">If this post helped you, please consider turning off your adblocker <br />or giving us all of your money.</p>
                   <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                   <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
               </form>
