Noew blog poster

--- a/themes/gstylez/layout/partials/footer.ejs
+++ b/themes/gstylez/layout/partials/footer.ejs
@@ -5,6 +5,9 @@
     <h4>
         &copy; <%= date(new Date(), 'YYYY') %> Scruffy City Solutions
     </h4>
+    <h4>
+        Made with <i class="fa fa-heart primary-color"></i> in Knoxville, TN
+    </h4>
 </footer>
 <!-- jQuery included in head.ejs -->
 <%- js('lib/waves') %>
