fixed subscribe link

--- a/themes/gstylez/layout/partials/footer.ejs
+++ b/themes/gstylez/layout/partials/footer.ejs
@@ -98,7 +98,7 @@
 
 <script>
     $( function() {
-        $("ul.menus li:last-child a").on("click", function () {
+        $("a#sub").on("click", function () {
             $( "#subscribe" ).modal();
         });
     } );
