--- a/themes/gstylez/layout/partials/nav.ejs
+++ b/themes/gstylez/layout/partials/nav.ejs
@@ -66,7 +66,11 @@
                         </li>
                      <% } %>
                     <%}%>
-                   
+                    <li>
+                        <a id="sub" class="wave no-smoothstate">
+                            Email Sign Up
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
